Lesson_4. HW. работа над ошибками